# feh_sim_egui

./: Cargo.toml  Trunk.toml  index.html
assets/: sw.js
src/: app.rs  lib.rs  main.rs  types.rs
