[package]
name = "feh_sim_egui"
version = "0.1.0"
authors = ["Will Fischer <willfischer11@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"

[profile.release]
opt-level = 2 # fast and small wasm
